show negative values correctly in pie charts, fdo#69143

Change-Id: I2a33095f7dceb564911478a30aed1137ddacd531